# website-fa23

./: .gitignore  .markdownlint.json  404.html  CNAME  Gemfile  Makefile  README.md  _config.yml  about.md  academic_interns.html  announcements.html  index.html  lec.html  pyproject.toml  resources.md  staff.html  todo.html
.github/workflows/: publish-site.yml
_announcements/: _template.md  week0.md
_data/: 3blank.yml  ais.yml  create_staff_ymls.py  finals.yml  gen_yaml.py  lecture_polls.yml  review.yml  rrr.yml  schedule.yml  staff.csv  staff_backup.csv  tas.yml  tutors.yml  week1.yml  week10.yml  week11.yml  week12.yml  week13.yml  week14.yml  week15.yml  week2.yml  week3.yml  week4.yml  week5.yml  week6.yml  week7.yml  week8.yml  week9.yml
_includes/: alert.html  head.html  java_visualizer.html  navbar.html  section_blurb.md
_layouts/: announcement.html  blankpage.html  default.html  page.html
_sass/: root.scss
_sass/abstracts/: _berkeley.scss  _mixins.scss  _variables.scss
_sass/base/: _common.scss
_sass/components/: _alert.scss  _announcements.scss  _asciinema.scss  _back-to-top.scss  _build-time.scss  _code.scss  _course-calendar.scss  _course-info.scss  _details.scss  _full-calendar.scss  _function-block.scss  _java-visualizer.scss  _navbar.scss  _toc.scss
_sass/pages/: _about.scss  _index.scss  _page.scss  _staff.scss
assets/js/: calendar.js  darkreader.js  staff.js  top.js
materials/47b/: index.md
materials/demos/: asymptotics.html  asymptotics2.md
materials/guides/: asymptotics.md
materials/hw/: hw3faq.md
materials/hw/hw0/: a.md  (+2 more)
(+172 files in other folders)
