[tool.poetry]
name = "website-fa23"
version = "0.1.0"
description = ""
authors = ["Ethan Ordentlich <ethan.ordentlich2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
googledrivedownloader = "^0.4"
PyYAML = "^6.0"
requests = "^2.28.1"
tqdm = "^4.64.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
